--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,11 +34,11 @@ jobs:
       - name: Build with Maven
         shell: bash           # Usa Bash en lugar de PowerShell
         run: |
-          cd courseservice
+          cd forumMessage
           mvn -B clean install
 
       - name: Run tests
         shell: bash           # Usa Bash en lugar de PowerShell
         run: |
-          cd courseservice
+          cd forumMessage
           mvn test
