Feat: docker image done

--- a/forumMessage/src/main/resources/application.properties
+++ b/forumMessage/src/main/resources/application.properties
@@ -2,3 +2,10 @@ spring.application.name=ForumMessage
 
 spring.data.mongodb.uri=mongodb+srv://fis:fis@deliverusadvanced.sot48mx.mongodb.net/?retryWrites=true&w=majority&appName=deliverusadvanced
 spring.data.mongodb.database=FIS
+# Path to the RSA public key used for JWT verification
+jwt.public-key.path=classpath:public-key.pem
+
+# Paths that require authentication
+jwt.protected-paths=/api/protected/*
+
+api.version=v1
