Feat: validation of model and bad words in content

--- a/forumMessage/src/main/resources/application.properties
+++ b/forumMessage/src/main/resources/application.properties
@@ -9,3 +9,7 @@ jwt.public-key.path=classpath:public-key.pem
 jwt.protected-paths=/api/protected/*
 
 api.version=v1
+
+# consumir api de modelacion de palabras en message
+badwords.api.key=224d424766mshbfbf8766bac89a3p17c285jsn2eedcdc6af1b
+badwords.api.url=https://community-purgomalum.p.rapidapi.com/json?text=
