--- a/forum/src/main/resources/application.properties
+++ b/forum/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=ForumMessage
+spring.application.name=Forum
 
 spring.data.mongodb.uri=mongodb+srv://fis:fis@deliverusadvanced.sot48mx.mongodb.net/?retryWrites=true&w=majority&appName=deliverusadvanced
 spring.data.mongodb.database=FIS
