Feat: kubernete files

--- a/forum/src/main/resources/application.properties
+++ b/forum/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=Forum
 
-spring.data.mongodb.uri=mongodb+srv://fis:fis@deliverusadvanced.sot48mx.mongodb.net/?retryWrites=true&w=majority&appName=deliverusadvanced
+spring.data.mongodb.uri=mongodb+srv://${MONGODB_USER}:${MONGODB_PASSWORD}@deliverusadvanced.sot48mx.mongodb.net/?retryWrites=true&w=majority&appName=deliverusadvanced
 spring.data.mongodb.database=FIS
 # Path to the RSA public key used for JWT verification
 jwt.public-key.path=classpath:public-key.pem
