--- a/forum/src/main/resources/application.properties
+++ b/forum/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=Forum
 
-spring.data.mongodb.uri=mongodb+srv://fis:fis@deliverusadvanced.sot48mx.mongodb.net/?retryWrites=true&w=majority&appName=deliverusadvanced
+spring.data.mongodb.uri=${MONGODB_URI}
 spring.data.mongodb.database=FIS
 # Path to the RSA public key used for JWT verification
 jwt.public-key.path=classpath:public-key.pem
@@ -8,8 +8,24 @@ jwt.public-key.path=classpath:public-key.pem
 # Paths that require authentication
 jwt.protected-paths=/api/protected/*
 
-api.version=v1
 
-# consumir api de modelacion de palabras en message
-badwords.api.key=224d424766mshbfbf8766bac89a3p17c285jsn2eedcdc6af1b
-badwords.api.url=https://community-purgomalum.p.rapidapi.com/json?text=
+
+
+badwords.api.key=${BADWORDS_API_KEY}
+badwords.api.url=${BADWORDS_API_URL}
+
+#spring.datasource.url=jdbc:h2:mem:testdb
+
+
+# Configuración de la base de datos en memoria H2
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;MODE=MYSQL
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.datasource.platform=h2
+
+# Configuración de JPA y Hibernate
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true  
+spring.datasource.initialization-mode=always  
