--- a/forum/src/main/resources/application.properties
+++ b/forum/src/main/resources/application.properties
@@ -9,7 +9,7 @@ jwt.public-key.path=classpath:public-key.pem
 jwt.protected-paths=/api/protected/*
 
 
-
+base.url=${BASE_URL}
 
 badwords.api.key=${BADWORDS_API_KEY}
 badwords.api.url=${BADWORDS_API_URL}
