--- a/forum/src/main/resources/application.properties
+++ b/forum/src/main/resources/application.properties
@@ -11,8 +11,13 @@ jwt.protected-paths=/api/protected/*
 
 base.url=${BASE_URL}
 
+base: ${BASE:http://localhost:8080}
+
 badwords.api.key=${BADWORDS_API_KEY}
 badwords.api.url=${BADWORDS_API_URL}
+
+springdoc.api-docs.path=/swagger/forum-service/api-docs
+
 
 #spring.datasource.url=jdbc:h2:mem:testdb
 
